# Project1

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py
idx_trading_system/: __init__.py  backtest.py  config.yaml  data_loader.py  features.py  models.py  portfolio.py
idx_trading_system/notebooks/: demo_trading_system.ipynb
idx_trading_system/scripts/: run_backtest.py  simple_demo.py  validate_system.py
idx_trading_system/tests/: test_basic.py
